--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
     <!-- build:css styles/vendor.css -->
     
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_componenbootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_componenangular-motion/dist/angular-motion.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -31,13 +33,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand">TimerServer</a>
+        <a href="#" class="navbar-brand">Parkour</a>
       </div>
       <!-- Collection of nav links and other content for toggling -->
       <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#timer">Timer</a></li>
-          <li><a href="#about">About</a><li>
+          <li><a href="#timer">Parprogrammera</a></li>
+          <li><a href="#about">Om</a><li>
         </ul>
       </div>
     </nav>
@@ -67,6 +69,8 @@
     <!-- build:js scripts/vendor.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
     <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
@@ -89,13 +93,17 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+	<script src="scripts/controllers/newbout.js"></script>
+	<script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/success.js"></script>
         <script src="scripts/factories/config.js"></script>
         <script src="scripts/factories/token.js"></script>
         <script src="scripts/requests/bouts.js"></script>
+	<script src="scripts/requests/users.js"></script>
+	<script src="scripts/requests/courses.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
